# langchain-resume-parser

./: .gitignore  .justfile  README.md  pyproject.toml  response.txt
src/: code.py
